fix(asciidoc): symlinkの作成方法を修正する

--- a/20211004082457-asciidoctor_browser_extension_does_not_render_file_in_wsl.adoc
+++ b/20211004082457-asciidoctor_browser_extension_does_not_render_file_in_wsl.adoc
@@ -122,7 +122,7 @@ directoryに `$` が含まれるasciidoc fileではHTMLはrenderされます。
 
 . 管理者権限で `cmd.exe` 起動する
 . symlinkを作成する +
-  `mklink <symlink_name> \file://wsl%24/Ubuntu-20.04/home/...` +
+  `mklink <symlink_name> \\wsl$\Ubuntu-20.04\home\...` +
   右クリックで作成できるshortcutでは駄目です。
 . symlink経由でasciidoc fileを開く +
   browserのaddressに `.../<symlink_name>/...` を入力します。
